--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+    <header><h1>COPA DO MUNDO</h1></header>
+    <section></section>
+    <footer></footer>
 
 </body>
 </html>
