--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="teste.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
 </head>
 
@@ -15,7 +15,7 @@
 		
 		<!-- Cabecalho -->
 		<header> 
-			<h1>LOREN IPSUN</h1>
+			<h1>COPA DO MUNDO - 2014</h1>
 		</header>
 
 		<!-- Conteudo -->
@@ -44,7 +44,16 @@
 		</section>
 
 		<!-- Rodape -->
-		<footer></footer>
+		<footer>
+			<ul>
+	            <li><img src="noticia-hover.png"><a href="index.html">Noticia</a></li>
+	            <li><img src="jogos.png"><a href="jogos.html">Jogos</a></li>
+	            <li><img src="grupo.png"><a href="grupos.html">Grupos</a></li>
+	            <li><img src="equipe.png"><a href="equipes.html">Equipes</a></li>
+	            <li><img src="estadio.png"><a href="estadios.html">Estádios</a></li>
+
+	        </ul>
+        </footer>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
